--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 :root {
     --white-color: #ffffff;
     --red-color: #EF4036;
+    --dark-color: #282735;
 }
 
 *,
@@ -21,7 +22,8 @@ body {
 }
 
 header {
-    height: 100vh;
+    min-height: 100vh;
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(56,77,94,1) 0%, rgba(22,28,43,1) 100%);
 }
 
 /*TOP BAR CONTAINER*/
@@ -31,12 +33,13 @@ header {
 }
 
 .top-nav-bar-wrapper {
-    width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: .8rem;
+    padding: 0 1rem;
 }
 
 .contact-information-container {
@@ -95,9 +98,10 @@ header {
 }
 
 .slider-container {
-    height: 100%;
+    height: 100vh;
     width: 500%;
     display: flex;
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 0% 100%);
 }
 
 .header-background-slide-container input[type="radio"] {
@@ -117,7 +121,7 @@ header {
 
 .radio-slide-label-container {
     position: absolute;
-    bottom: 4rem;
+    bottom: 10rem;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -149,4 +153,265 @@ header {
 
 #radio3:checked ~ .first {
     margin-left: -40%;
+}
+
+
+
+
+
+.header-navbar-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(255,255,255,.1);
+}
+
+.header-navbar-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1500px;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.logo-container > i {
+    font-size: 5rem;
+    color: var(--red-color);
+}
+
+.logo-content > div:first-child {
+    font-size: 1.6rem;
+}
+
+.logo-content span {
+    color: var(--red-color);
+}
+
+.logo-content > div:last-child {
+    font-size: .8rem;
+}
+
+.nav-links-container {
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+}
+
+.nav-links-container a {
+    text-decoration: none;
+    color: var(--white-color);
+    transition: color .25s ease-in-out;
+}
+
+.nav-links-container > li:hover > a {
+    color: var(--red-color);
+}
+
+.search-container {
+    border: 1px solid var(--white-color);
+    padding: .8rem;
+    border-radius: 5px;
+    display: flex;
+    gap: 1rem;
+}
+
+.search-container > input {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: var(--white-color);
+}
+
+.search-container > input::placeholder {
+    color: var(--white-color);
+    opacity: 1;
+    font-style: italic;
+}
+
+
+
+
+
+.header-disc-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    height: 300px;
+    width: 550px;
+    top: 50%;
+}
+
+.header-disc-container > img {
+    height: 300px;
+    width: auto;
+}
+
+.disc-content-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.disc-content-header {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.disc-content-header > span {
+    font-size: .8rem;
+    padding: .4rem;
+    background-color: #EF4036;
+    margin-left: .5rem;
+}
+
+.disc-content-header + div {
+    font-size: .7rem;
+}
+
+.disc-content-info > button {
+    background: transparent;
+    border: 1px solid var(--white-color);
+    color: var(--white-color);
+    padding: 1rem;
+    width: 200px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+/* SECTION CONTENT */
+section {
+    height: 100vh;
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(56,77,94,1) 0%, rgba(22,28,43,1) 100%);
+    position: relative;
+}
+
+.content-section-container {
+    height: 100%;
+}
+
+.content-section-wrapper {
+    height: 100vh;    
+    max-width: 1500px;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    position: absolute;
+    top: -15rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.info-container {
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(56,77,94,1) 0%, rgba(22,28,43,1) 100%);
+    clip-path: polygon(0 7%, 100% 0, 100% 100%, 0% 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    padding: 5rem;
+    width: 100%;
+}
+
+.content-choices-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.choice-item-icon-container {
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: var(--red-color);
+    width: 50px;
+    height: 50px;
+    display: grid;
+    place-items: center;
+    color: var(--dark-color);
+}
+
+.choice-item {
+    max-width: 250px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    text-align: center;
+}
+
+.choice-item-icon-container > i {
+    font-size: 1.3rem;
+    margin-top: .6rem;
+}
+
+.choice-item span {
+    color: var(--red-color);
+}
+
+.choice-item > div:last-child {
+    font-size: .9rem;
+}
+
+.new-release-container {
+    background-color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1000px) {
+    .header-navbar-wrapper {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .top-nav-bar-wrapper {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 530px) {
+    .nav-links-container {
+        gap: 1rem;
+        font-size: .8rem;
+    }
+
+    .header-disc-container {
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        padding: 1rem;
+    }
+
+    .header-disc-container > img {
+        height: 200px;
+    }
 }
