--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --white-color: #ffffff;
     --red-color: #EF4036;
     --dark-color: #282735;
+    --yellow-color: #FCC000;
+    --background-gradient: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(56,77,94,1) 0%, rgba(22,28,43,1) 100%);
 }
 
 *,
@@ -307,13 +309,13 @@ section {
 }
 
 .content-section-wrapper {
-    height: 100vh;    
+    min-height: 100vh;    
     max-width: 1500px;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     position: absolute;
-    top: -15rem;
+    top: -10rem;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -328,13 +330,15 @@ section {
     gap: 5rem;
     padding: 5rem;
     width: 100%;
+    min-height: 50vh;
 }
 
 .content-choices-container {
     width: 100%;
     display: flex;
     justify-content: space-around;
-
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 
 .choice-item-icon-container {
@@ -370,9 +374,115 @@ section {
 }
 
 .new-release-container {
-    background-color: black;
+    min-height: 50vh;
 }
 
+.new-release-header-container {
+    background-color: black;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+    padding: 2rem 0;
+}
+
+.line-bar {
+    width: 50px;
+    height: 3px;
+    background-color: rgba(255,255,255,.3);
+    border-radius: 10000000px;
+}
+
+.games-container {
+    height: 50vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(56,77,94,1) 0%, rgba(22,28,43,1) 100%);
+}
+
+.game-wrapper {
+    width: 375px;
+    height: 100%;
+    position: relative;
+    cursor: pointer;
+}
+
+.game-wrapper img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: filter .25s ease-in-out;
+}
+
+.game-wrapper-info-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.promo-container {
+    padding: 1rem;
+}
+
+.promo-container > button {
+    display: block; 
+    padding: .5rem;
+    border: none;
+    color: inherit;
+    font-family: inherit;
+    font-weight: 700;
+    font-style: italic;
+    font-size: 1rem;
+}
+
+.price-btn {
+    background-color: var(--red-color);
+}
+
+.discount-btn {
+    margin-top: 5px;
+    background-color: var(--yellow-color);
+}
+
+.game-info {
+    clip-path: polygon(0 14%, 100% 0, 100% 100%, 0% 100%);
+    background-color: var(--white-color);
+    color: var(--dark-color);
+    padding: 2rem 1rem 1rem 1rem;
+    opacity: 0;
+    transition: opacity .25s ease-in-out;
+}
+
+.game-wrapper:hover img {
+    filter: blur(10px);
+}
+
+.game-wrapper:hover .game-info {
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+.footer-container {
+    background: black;
+    min-height: 50vh;
+}
 
 
 
@@ -389,6 +499,31 @@ section {
         flex-direction: column;
         align-items: center;
         gap: 1rem;
+    }
+}
+
+@media (max-width: 770px) {
+    .games-container {
+        padding: 0 1rem;
+    }
+
+    .game-wrapper {
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 710px) {
+    .content-section-wrapper {
+        top: -10rem;
+    }
+    
+    .info-container {
+        padding: 5rem 1rem;
+    }
+
+    .info-container > h4 {
+        text-align: center;
     }
 }
 
@@ -409,6 +544,7 @@ section {
         width: 100%;
         justify-content: center;
         padding: 1rem;
+        transform: translateY(-50%);
     }
 
     .header-disc-container > img {
